--- a/index.html
+++ b/index.html
@@ -2889,7 +2889,7 @@
                 </h2>
                 <span class="cs-accordian_toggle"></span>
               </div>
-              <div class="cs-accordian-body" style="">
+              <div class="cs-accordian-body" style-="">
                 We play nice with everyone! WalletConnect supports a wide range
                 of popular wallets, including MetaMask, Coinbase Wallet, Trust
                 Wallet, and many more. The list keeps growing, so check our
